--- a/.travis.yml
+++ b/.travis.yml
@@ -13,20 +13,28 @@ branches:
   only:
     - "master"
 
-before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo dpkg --add-architecture i386; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -qq -y install build-essential libglu1-mesa-dev zlib1g-dev libalure-dev libvorbisfile3 libvorbis-dev 
-      libdumb1-dev libc++-dev libsfml-dev libgtk2.0-dev libbullet-dev libbox2d-dev libgme-dev gcc-multilib 
-      g++-multilib libc6:i386 libncurses5:i386 libstdc++6:i386 lib32z1-dev libglu1-mesa:i386 libx11-6:i386  libc++-dev:i386
-      mingw-w64 wine libboost-dev libboost-iostreams-dev libboost-filesystem-dev libboost-program-options-dev libboost-system-dev; fi
-  
-  # Ubuntu is a turd
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo ln -s /usr/lib/i386-linux-gnu/mesa/libGL.so.1 /usr/lib/i386-linux-gnu/libGL.so; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo ln -s /usr/lib/i386-linux-gnu/libX11.so.6 /usr/lib/i386-linux-gnu/libX11.so; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo ln -s /usr/lib/i386-linux-gnu/libGLU.so.1 /usr/lib/i386-linux-gnu/libGLU.so; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo ln -s /usr/include/x86_64-linux-gnu/zconf.h /usr/include; fi
+sudo: false
+dist: trusty
+osx_image: xcode9.2
 
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gcc; fi
+addons:
+  apt:
+    packages:
+    - build-essential 
+    - libglu1-mesa-dev
+    - zlib1g-dev
+    - libboost-dev 
+    - libboost-iostreams-dev 
+    - libboost-filesystem-dev 
+    - libboost-program-options-dev 
+    - libboost-system-dev
+
+before_install:
+  # Ubuntu is a turd
+  #- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo ln -s /usr/lib/i386-linux-gnu/mesa/libGL.so.1 /usr/lib/i386-linux-gnu/libGL.so; fi
+  #- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo ln -s /usr/lib/i386-linux-gnu/libX11.so.6 /usr/lib/i386-linux-gnu/libX11.so; fi
+  #- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo ln -s /usr/lib/i386-linux-gnu/libGLU.so.1 /usr/lib/i386-linux-gnu/libGLU.so; fi
+  #- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo ln -s /usr/include/x86_64-linux-gnu/zconf.h /usr/include; fi
   
 install:
   - chmod +x ./ci-build.sh
@@ -44,132 +52,133 @@ matrix:
   include:
 #BEGIN OSX
   # Compilers
-  - { os: osx, osx_image: xcode9.2,
+  - { os: osx,
       env: { COMPILER: "clang", PLATFORM: "None", MODE: "Debug", GRAPHICS: "None", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "None" } }
-  - { os: osx, osx_image: xcode9.2,
+  - { os: osx,
       env: { COMPILER: "gcc", PLATFORM: "None", MODE: "Debug", GRAPHICS: "None", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "None" } }
 #END OSX
  
+#TRAVIS_SUDO
 #BEGIN LINUX
   # Game Modes
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Run", GRAPHICS: "OpenGL1", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "None" } }
  
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "None" } }
       
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Compile", GRAPHICS: "OpenGL1", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "None" } }
   
   # Compilers
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc32", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "None" } }
   
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "clang", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "None" } }
   
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "clang32", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "None" } }
   
   # Graphics
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL3", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "None" } }
   
   # Audio
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "OpenAL", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "None" } }
   
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "SFML", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "None" } }
   
   # Networking
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "None", COLLISION: "None", NETWORK: "Asynchronous", WIDGETS: "None", EXTENSIONS: "None" } }
   
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "None", COLLISION: "None", NETWORK: "BerkeleySockets", WIDGETS: "None", EXTENSIONS: "None" } }
   
   # Widgets
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "GTK+", EXTENSIONS: "None" } }
   
   # Collision
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "None", COLLISION: "BBox", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "None" } }
   
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "None", COLLISION: "Precise", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "None" } }
   
   # Extensions
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "Alarms" } }
   
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "DataStructures,Asynchronous" } }
   
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "GTK+", EXTENSIONS: "BasicGUI" } }
   
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "Box2DPhysics" } }
   
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "BulletDynamics" } }
   
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "DataStructures" } }
   
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "DateTime" } }
   
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "GM5Compat" } }
   
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "OpenAL", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "GME" } }
   
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "SFML", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "GME" } }
   
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "IniFilesystem" } }
   
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "DataStructures,Json" } }
   
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "MatrixMath" } }
   
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "None", COLLISION: "BBox", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "Paths" } }
   
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "None", COLLISION: "BBox", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "Paths,MotionPlanning" } }
   
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "None", COLLISION: "Precise", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "Paths,MotionPlanning" } }
   
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "ParticleSystems" } }
   
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL3", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "ParticleSystems" } }
   
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL3", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "StudioPhysics" } }
   
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "Timelines" } }
     
     # Cross Compile
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "MinGW32", PLATFORM: "Win32", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "None" } }
   
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "MinGW64", PLATFORM: "Win32", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "None" } }
     
     # The big ol' "None", test.
-  - { os: linux, sudo: required, dist: trusty,
+  - { os: linux,
       env: { COMPILER: "gcc", PLATFORM: "None", MODE: "Debug", GRAPHICS: "None", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "None" } }
 #END LINUX
 
