--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ init:
   - ps: |
       $apiURL = "https://ci.appveyor.com/api/projects/$env:APPVEYOR_ACCOUNT_NAME/$env:APPVEYOR_PROJECT_SLUG"
       $mytest = Invoke-RestMethod -Method Get -Uri $apiURL
-      Write-Host ($mytest | Out-String)
+      Write-Host ($mytest)
       $env:ARCHIVE_JOB = (Invoke-RestMethod -Method Get -Uri $apiURL).build.jobs[0].jobId
   - echo "%ARCHIVE_JOB%"
   - cd %APPVEYOR_BUILD_FOLDER%
