--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,8 +15,8 @@ init:
   - ps: |
       $apiURL = "https://ci.appveyor.com/api/projects/$env:APPVEYOR_ACCOUNT_NAME/$env:APPVEYOR_PROJECT_SLUG"
       $project = Invoke-RestMethod -Method Get -Uri $apiURL
-      Write-Host ($project.builds | ConvertTo-Json)
-      $env:ARCHIVE_JOB = (Invoke-RestMethod -Method Get -Uri $apiURL).builds[$env:APPVEYOR_BUILD_ID].jobs[0].jobId
+      Write-Host ($project | ConvertTo-Json)
+      $env:ARCHIVE_JOB = (Invoke-RestMethod -Method Get -Uri $apiURL).build.jobs[0].jobId
   - echo "%ARCHIVE_JOB%"
   - echo "%APPVEYOR_BUILD_ID%"
   - echo "%APPVEYOR_BUILD_NUMBER%"
