--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,19 +7,15 @@ skip_branch_with_pr: true
 branches:
   only:
     - master
-#test
+
 init:
   - echo "%APPVEYOR_JOB_ID%"
   # store the name of the archive job in an environment variable
   # this designates the first job of every build as the archive job
-  - echo "%APPVEYOR_BUILD_ID%"
-  - echo "%APPVEYOR_BUILD_NUMBER%"
-  - echo "%APPVEYOR_BUILD_VERSION%"
   - ps: |
-      $apiURL = "https://ci.appveyor.com/api/projects/$env:APPVEYOR_ACCOUNT_NAME/$env:APPVEYOR_PROJECT_SLUG/build/$env:APPVEYOR_BUILD_VERSION"
-      $project = Invoke-RestMethod -Method Get -Uri $apiURL
-      Write-Host ($project | ConvertTo-Json)
-      $env:ARCHIVE_JOB = (Invoke-RestMethod -Method Get -Uri $apiURL).build.jobs[0].jobId
+      $apiURL = "https://ci.appveyor.com/api/projects/$env:APPVEYOR_ACCOUNT_NAME/$env:APPVEYOR_PROJECT_SLUG"
+      $project = Invoke-RestMethod -Method Get -Uri $apiURL/build/$env:APPVEYOR_BUILD_VERSION
+      $env:ARCHIVE_JOB = $project.build.jobs[0].jobId
   - echo "%ARCHIVE_JOB%"
   - cd %APPVEYOR_BUILD_FOLDER%
 environment:
