--- a/.travis.yml
+++ b/.travis.yml
@@ -39,16 +39,17 @@ install:
 env:
   global:
     - OUTPUT=/tmp/test
-  
+
 matrix:
   fast_finish: true
   allow_failures:
+    - env: ALLOW_FAIL="TRUE"
 #BEGIN OSX
   # Compilers
   - { os: osx, osx_image: xcode9.2,
-      env: { COMPILER: "clang", PLATFORM: "None", MODE: "Debug", GRAPHICS: "None", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "None" } }
+      env: { ALLOW_FAIL="TRUE" COMPILER: "clang", PLATFORM: "None", MODE: "Debug", GRAPHICS: "None", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "None" } }
   - { os: osx, osx_image: xcode9.2,
-      env: { COMPILER: "gcc", PLATFORM: "None", MODE: "Debug", GRAPHICS: "None", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "None" } }
+      env: { ALLOW_FAIL="TRUE" COMPILER: "gcc", PLATFORM: "None", MODE: "Debug", GRAPHICS: "None", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "None" } }
 #END OSX
   include:
 #BEGIN LINUX
