--- a/.travis.yml
+++ b/.travis.yml
@@ -36,21 +36,10 @@ install:
   - unzip enigma-libs.zip -d ENIGMAsystem/
   - mv ENIGMAsystem/Install ENIGMAsystem/Additional
 
-env:
-  global:
-    - OUTPUT=/tmp/test
+env: # important!
 
 matrix:
   fast_finish: true
-  allow_failures:
-    - env: ALLOW_FAIL="TRUE"
-#BEGIN OSX
-  # Compilers
-  - { os: osx, osx_image: xcode9.2,
-      env: { ALLOW_FAIL="TRUE", COMPILER: "clang", PLATFORM: "None", MODE: "Debug", GRAPHICS: "None", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "None" } }
-  - { os: osx, osx_image: xcode9.2,
-      env: { ALLOW_FAIL="TRUE", COMPILER: "gcc", PLATFORM: "None", MODE: "Debug", GRAPHICS: "None", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "None" } }
-#END OSX
   include:
 #BEGIN LINUX
   # Game Modes
@@ -174,6 +163,15 @@ matrix:
   - { os: linux, sudo: required, dist: trusty,
       env: { COMPILER: "gcc", PLATFORM: "None", MODE: "Debug", GRAPHICS: "None", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "None" } }
 #END LINUX
+
+  allow_failures:
+#BEGIN OSX
+  # Compilers
+  - { os: osx, osx_image: xcode9.2,
+      env: { ALLOW_FAIL="TRUE", COMPILER: "clang", PLATFORM: "None", MODE: "Debug", GRAPHICS: "None", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "None" } }
+  - { os: osx, osx_image: xcode9.2,
+      env: { ALLOW_FAIL="TRUE", COMPILER: "gcc", PLATFORM: "None", MODE: "Debug", GRAPHICS: "None", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "None" } }
+#END OSX
 
 script:
   - ./ci-build.sh
